# Xuzumi

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
Engine/: CMakeLists.txt
Engine/Inc/Xuzumi/: Precompiled.hpp  Xuzumi.hpp
Engine/Inc/Xuzumi/Core/: CommonTypes.hpp  Compiler.hpp  CompilerInfo.hpp  Delegate.hpp  FuncName.hpp  ObserverPtr.hpp  StringUtils.hpp
Engine/Inc/Xuzumi/Core/Templates/: IsCompatible.hpp  SizeOf.hpp  TypeStorage.hpp
Engine/Inc/Xuzumi/Debug/: Assertion.hpp  ConsoleLogWriter.hpp  DebugSession.hpp  FileLogWriter.hpp  Logging.hpp  TimedLogFormatter.hpp  TimestampLogFormatter.hpp
Engine/Inc/Xuzumi/IDFramework/: HandleGenerator.hpp  IDBase.hpp
Engine/Inc/Xuzumi/Memory/: ControlBlock.hpp  Deleter.hpp  FactoryExpirationGuard.hpp  ObserverPtr.hpp  PointerBase.hpp  PoolAllocator.hpp  Referencer.hpp  ResourceDeleterGuard.hpp  SharedFactory.hpp  SharedPtr.hpp  StrongReferencer.hpp  UniquePtr.hpp  WeakPtr.hpp
Engine/Inc/Xuzumi/Messaging/: Event.hpp  EventBus.hpp  EventPublisher.hpp  EventSubscriber.hpp
Engine/Inc/Xuzumi/Ownership/: SharedFactory.hpp
Engine/Inc/Xuzumi/TypeInfo/: TypeID.hpp  TypeName.hpp
Engine/Inc/Xuzumi/TypeMeta/: TypeID.hpp  TypeInfo.hpp  TypeName.hpp
Engine/Src/Xuzumi/Core/: StringUtils.cpp
Engine/Src/Xuzumi/Debug/: Assertion.cpp  DebugSession.cpp  FileLogWriter.cpp  Logging.cpp  TimedLogFormatter.cpp  TimestampLogFormatter.cpp
Engine/Src/Xuzumi/IDFramework/: HandleGenerator.cpp
Engine/Src/Xuzumi/Input.Win32/: Win32InputEvents.hpp
Engine/Src/Xuzumi/Memory/: PoolAllocator.cpp  Referencer.cpp  StrongReferencer.cpp
Engine/Src/Xuzumi/Messaging/: EventBus.cpp  EventPublisher.cpp  EventSubscriber.cpp
Engine/Src/Xuzumi/Platform/: PlatformService.cpp
Engine/Src/Xuzumi/Platform.Win32/: PlatformServiceWin32.cpp  PlatformServiceWin32.hpp  Win32PlatformService.cpp  Win32PlatformService.hpp  Win32WindowClass.cpp  Win32WindowClass.hpp  Win32WindowFrame.cpp
Engine/Src/Xuzumi/TypeInfo/: TypeID.cpp
Engine/Src/Xuzumi/TypeMeta/: TypeInfo.cpp
Engine/Tests/: CMakeLists.txt
Engine/Tests/Src/: DelegateTests.cpp  HandleGeneratorTests.cpp  IsCompatibleTests.cpp  SharedPtrTests.cpp  StringUtilsTests.cpp  WeakPtrTests.cpp
Engine/Tests/Src/TestCore/: TestCompiler.cpp  TestCompilerInfo.cpp  TestDelegate.cpp
Engine/Tests/Src/TestIDFramework/: TestHandleGenerator.cpp
Engine/Tests/Src/TestMemory/: TestControlBlock.cpp  TestObserverPtr.cpp  TestReferencer.cpp  TestResourceDeleterGuard.cpp  TestSharedPtr.cpp  TestWeakPtr.cpp
Engine/Tests/Src/TestMessaging/: TestEvent.cpp  TestEventBus.cpp  TestEventPublisher.cpp  TestEventSubscriber.cpp
Engine/Tests/Src/TestTypeMeta/: TestTypeID.cpp
Engine/include/Xuzumi/: Precompiled.hpp  Xuzumi.hpp
Engine/include/Xuzumi/Core/: CompilerInfo.hpp  Delegate.hpp  FormatString.hpp  FuncName.hpp  PlatformInfo.hpp  StringUtils.hpp
Engine/include/Xuzumi/Core/Templates/: AlignOf.hpp  IsCompatible.hpp  TypeStorage.hpp
Engine/include/Xuzumi/Debug/: Assertion.hpp  FileLogWriter.hpp  Logging.hpp
Engine/include/Xuzumi/IDFramework/: HandleGenerator.hpp
Engine/include/Xuzumi/Input/: InputDevice.hpp  InputEvents.hpp  KeyboardKey.hpp
Engine/include/Xuzumi/Instrumentation/: AssertMacros.hpp  AssertRecord.hpp  AssertRecordBuilder.hpp  AssertService.hpp  InstrumentationProfile.hpp  InstrumentationSession.hpp  LogEmitter.hpp  LogFormatter.hpp  LogRecord.hpp  LogRecordBuilder.hpp  Logger.hpp  LoggerMacros.hpp  LoggerSink.hpp  LoggerSinkBuilder.hpp  PerformanceCapture.hpp  PerformanceMacros.hpp  PerformanceProfiler.hpp  PerformanceRecord.hpp  PerformanceRecordStream.hpp  Unreachable.hpp
Engine/include/Xuzumi/Memory/: FactoryExpirationGuard.hpp  ObserverPtr.hpp  PointerBase.hpp  PoolAllocator.hpp  SharedPtr.hpp
Engine/include/Xuzumi/Messaging/: EventPublisher.hpp  EventSubscriber.hpp
Engine/include/Xuzumi/Platform/: PlatformEvents.hpp  PlatformService.hpp  WindowFrame.hpp
Engine/include/Xuzumi/String/: StringEncoder.hpp  StringEncoding.hpp  UnicodeFacts.hpp  Utf16CharView.hpp  Utf16Facts.hpp  Utf8CharView.hpp  Utf8Facts.hpp  UtfEncoding.hpp  UtfTextReader.hpp
Engine/include/Xuzumi/TypeMeta/: TypeID.hpp  TypeInfo.hpp
Engine/src/Xuzumi/Core/: FormatString.cpp
Engine/src/Xuzumi/Debug/: Assertion.cpp  ConsoleLogWriter.cpp
Engine/src/Xuzumi/Input.Win32/: Win32InputDevice.cpp  Win32InputDevice.hpp
Engine/src/Xuzumi/Instrumentation/: AssertRecordBuilder.cpp  AssertService.cpp  InstrumentationProfile.cpp  InstrumentationSession.cpp  LogEmitter.cpp  LogFormatter.cpp  LogRecordBuilder.cpp  Logger.cpp  LoggerSink.cpp  LoggerSinkBuilder.cpp  PerformanceCapture.cpp  PerformanceClock.cpp  PerformanceClock.hpp  PerformanceProfiler.cpp  PerformanceRecordStream.cpp
Engine/src/Xuzumi/Platform.Win32/: Win32Debug.hpp  Win32PlatformService.cpp  Win32SDK.hpp  Win32WindowClass.cpp  Win32WindowClass.hpp  Win32WindowFrame.cpp
Engine/src/Xuzumi/String/: StringEncoder.cpp  StringEncoding.cpp  UnicodeFacts.cpp  Utf16CharView.cpp  Utf8CharView.cpp  Utf8Facts.cpp  UtfEncoding.cpp  UtfTextReader.cpp
Engine/src/Xuzumi/TypeMeta/: TypeInfo.cpp
Engine/tmp/Xuzumi/IDFramework/: HandleGenerator.cpp
Engine/tmp/Xuzumi/Input.Win32/: Win32KeyMapping.cpp  Win32KeyMapping.hpp
Engine/tmp/Xuzumi/Platform.Win32/: Win32Debug.cpp  Win32WindowFrame.hpp
Engine/tmp/Xuzumi/TypeMeta/: TypeID.cpp
Sandbox/: CMakeLists.txt
Sandbox/Src/: App.cpp  App.hpp  Entity.hpp  main.cpp
Sandbox/src/: App.cpp  App.hpp  Entity.hpp  main.cpp
cmake/: TranslationCharset.cmake
